Bug 443256 - discover shows wrong version information in update list
Summary: discover shows wrong version information in update list
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: Flatpak Backend (other bugs)
Version First Reported In: 5.22.90
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Dan Leinir Turthra Jensen
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-10-03 12:03 UTC by Marcel
Modified: 2021-10-06 21:55 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot of discover update list (49.82 KB, image/png)
2021-10-03 12:03 UTC, Marcel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Marcel 2021-10-03 12:03:37 UTC
Created attachment 142118 [details]
screenshot of discover update list

SUMMARY

For packages installed using flatpak discover shows wrong version information, app are always updating from "stable" and runtime updates are mixed up if different branches of the same runtime are installed.


OBSERVED RESULT
See the attached screenshot. The CLI returns another list:

flatpak list
Name                           Application ID                                Version                        Zweig            Installation
Discord                        com.discordapp.Discord                        0.0.15                         stable           system
Spotify                        com.spotify.Client                            1.1.55.498.gf9a83c60           stable           system
Synology Drive                 com.synology.SynologyDrive                    3.0.1                          stable           system
Freedesktop Platform           org.freedesktop.Platform                      20.08.15                       20.08            system
default                        org.freedesktop.Platform.GL.default                                          19.08            system
Mesa                           org.freedesktop.Platform.GL.default           21.1.7                         20.08            system
openh264                       org.freedesktop.Platform.openh264             2.1.0                          2.0              system
Freedesktop SDK                org.freedesktop.Sdk                           19.08.14                       19.08            system
Freedesktop SDK                org.freedesktop.Sdk                           20.08.15                       20.08            system
Breeze Gtk theme               org.gtk.Gtk3theme.Breeze                                                     3.22             system
Breeze Gtk theme               org.gtk.Gtk3theme.Breeze-Dark                                                3.22             system
Signal Desktop                 org.signal.Signal                             5.17.2                         stable           system

flatpak remote-ls --updates 
Name                   Application ID                 Version                      Zweig          Architektur
Discord                com.discordapp.Discord         0.0.16                       stable         x86_64
Spotify                com.spotify.Client             1.1.68.632.g2b11de83         stable         x86_64
Signal Desktop         org.signal.Signal              5.18.0                       stable         x86_64

EXPECTED RESULT
Show the correct installed version and do not show runtime updates that are not available

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 5.22.90
KDE Frameworks Version: 5.86.0
Qt Version: 5.15.2
Comment 1 Bug Janitor Service 2021-10-06 15:23:51 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/discover/-/merge_requests/174
Comment 2 Aleix Pol 2021-10-06 21:54:25 UTC
Git commit 4ba0bc9a63ade498bd21caa9cbf1eb9e083ae671 by Aleix Pol.
Committed on 06/10/2021 at 15:22.
Pushed by apol into branch 'master'.

flatpak: Also show the installed version

For some (historical) reason we were just showing the branch.

M  +1    -1    libdiscover/backends/FlatpakBackend/FlatpakBackend.cpp
M  +1    -1    libdiscover/backends/FlatpakBackend/FlatpakBackend.h
M  +3    -1    libdiscover/backends/FlatpakBackend/FlatpakResource.cpp

https://invent.kde.org/plasma/discover/commit/4ba0bc9a63ade498bd21caa9cbf1eb9e083ae671
Comment 3 Aleix Pol 2021-10-06 21:55:05 UTC
Git commit fad3fdf24e9e93a41c157fff55464979494683d2 by Aleix Pol Gonzalez, on behalf of Aleix Pol.
Committed on 06/10/2021 at 21:55.
Pushed by apol into branch 'Plasma/5.23'.

flatpak: Also show the installed version

For some (historical) reason we were just showing the branch.


(cherry picked from commit 4ba0bc9a63ade498bd21caa9cbf1eb9e083ae671)

M  +1    -1    libdiscover/backends/FlatpakBackend/FlatpakBackend.cpp
M  +1    -1    libdiscover/backends/FlatpakBackend/FlatpakBackend.h
M  +3    -1    libdiscover/backends/FlatpakBackend/FlatpakResource.cpp

https://invent.kde.org/plasma/discover/commit/fad3fdf24e9e93a41c157fff55464979494683d2