flatpak: Also show the installed version

For some (historical) reason we were just showing the branch.

BUG: 443256